# arena-evaluation

./: CMakeLists.txt  setup.py
arena_evaluation/: CMakeLists.txt  metrics.py  package.xml  plots.py  setup.cfg  setup.py  utils.py
arena_evaluation/arena_evaluation/: data_recorder_node.py  get_metrics.py  metrics.py  plots.py  process_data.py  utils.py
arena_evaluation/arena_evaluation/scripts/: metrics.py  plots.py  utils.py
arena_evaluation/scripts/: create_plots  data_recorder_node
arena_evaluation_msgs/: CMakeLists.txt  package.xml
scripts/: data_recorder_node  data_recorder_node.py  get_metrics  process_data
