<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arena_evaluation</name>
  <version>0.0.0</version>
  <description>Record, evaluate, and plot navigational metrics to evaluate ROS navigation planners</description>
  <maintainer email="d.pichel@campus.tu-berlin.de">Duc Pichel</maintainer>
  <license>BSD</license>

  <!-- ament_cmake as CMake build tool used in ROS2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- packages dependencies  -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Metadata about how the package should be exported to other packages -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
