<?xml version="1.0"?>
<package format="2">
  <name>arena_evaluation</name>
  <version>1.0.0</version>
  <description>Part of the arena-benchmark system. 
  This package is for data recording, evaluation und plotting of performance metrics for arena-rosnav simulations.</description>
  <maintainer email="d.pichel@campus.tu-berlin.de">Duc Pichel</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <export>
  </export>
</package>