<?xml version="1.0"?>
<package format="2">
  <name>arena_evaluation_msgs</name>
  <version>1.0.0</version>
  <description>messages and services for arena_evaluation</description>
  <maintainer email="edu@vshch.com">Volodymyr Shcherbyna</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <export>
  </export>
</package>