<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arena_evaluation_msgs</name>
  <version>3.0.0</version>
  <description>messages and services for arena_evaluation</description>
  <maintainer email="edu@vshch.com">Volodymyr Shcherbyna</maintainer>
  <license>BSD</license>

  <!-- ament_cmake as CMake build tool used in ROS2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Specifies packages that are required at build time but are not needed for running the package. -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Specifies packages that are required at runtime. -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Declares that your package is part of the rosidl_interface_packages group and indicates that package provides ROS2 interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Metadata about how the package should be exported to other packages -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


  
  